Fix spacing issue in movie list

--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -4,7 +4,20 @@
     margin-left: 0;
     margin-right: 0;
 
-    img {
-        width: $movie-thumb-width;
+    .movie {
+        min-width: 150px; 
+        max-width: 232px;
+
+        @include desktop {
+            min-width: 193px;
+        }
+
+        @include fullhd {
+            min-width: 208px;
+        }
     }
+
+    // img {
+    //     width: $movie-thumb-width;
+    // }
 }
